--- a/board/write.html
+++ b/board/write.html
@@ -4,18 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../index.css" type="text/css" />
-    <!-- CSS 파일 이동 시, 링크 재작업 필요함. -->
-    <script src="/" type="module"></script>
-    <!-- JS 파일 추가 시, 링크 작업 필요함. -->
+    <link rel="stylesheet" href="../public/css/write.css" type="text/css" />
+    <script src="../public/js/board/write.js" type="module"></script>
   </head>
   <body>
-    <h2><a href="/">Diet diary</a></h2>
-    <!-- list.html 파일 추가 시, 링크 작업 필요함. -->
+    <h2><a href="./list.html">Diet diary</a></h2>
 
     <h2 class="board-title">글 쓰기</h2>
-    <form action="/" id="writeform">
-      <!-- view.html 파일 추가 시, 링크 작업 필요함.-->
+    <form action="./view.html" id="writeform">
       <ul class="board-write-form">
         <li>
           <span>제목</span>
