fix: Diet diary 시작

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="indexLogin.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="wrap">
@@ -27,6 +27,6 @@
         </div>
       </div>
     </div>
-    <script src="./public/js/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
