--- a/board/list.html
+++ b/board/list.html
@@ -15,7 +15,7 @@
                 <th>번호</th>
                 <th>제목</th>
                 <th>작성자</th>
-                <th>작성일</th>
+                <th><p class="clock"></p></th>
                 <th>조회수</th>
             </tr>
         </thead>
