fix : write.html (페이지 title, '로고' title, form Elem 링크) 수정

--- a/board/write.html
+++ b/board/write.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Diary Write</title>
     <link rel="stylesheet" href="../public/css/write.css" type="text/css" />
     <script src="../public/js/board/write.js" type="module"></script>
   </head>
   <body>
-    <h2><a href="./list.html">Diet diary</a></h2>
+    <h2><a href="./list.html">Diet diary List</a></h2>
 
     <h2 class="board-title">글 쓰기</h2>
-    <form action="./view.html" id="writeform">
+    <form action="./view.html?id=id" id="writeform">
       <ul class="board-write-form">
         <li>
           <span>제목</span>
