--- a/board/list.html
+++ b/board/list.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diary List</title>
-  </head>
-  <body>
-    <h1><a href="/"></a>LOGO</h1>
+    <link rel="stylesheet" href="../public/css/list.css">
+    <script type="module" src="../public/js/board/list.js"></script>
+</head>
+<body>
+    <h1><a href="/"></a>Diary</h1>
     <table class="board-table">
       <thead>
         <tr>
@@ -18,5 +20,6 @@
         </tr>
       </thead>
     </table>
-  </body>
+    <a href="./write.html" class="btn">글쓰기</a>
+</body>
 </html>
