--- a/board/list.html
+++ b/board/list.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
-<<<<<<< HEAD
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Diary List</title>
-    <link rel="stylesheet" href="../public/css/list.css">
-    <script type="module" src="../public/js/board/list.js"></script>
-</head>
-<body>
-=======
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Diary List</title>
@@ -17,7 +8,6 @@
       <script type="module" src="../public/js/board/list.js"></script>
   </head>
   <body>
->>>>>>> 34c2d19 (fix: list.html 수정)
     <h1><a href="/"></a>Diary</h1>
     <table class="board-table">
       <thead>
@@ -25,18 +15,11 @@
           <th>번호</th>
           <th>제목</th>
           <th>작성자</th>
-          <th><p class="clock"></p></th>
+          <th>작성일</th>
           <th>조회수</th>
         </tr>
       </thead>
-<<<<<<< HEAD
-    </table>
-    <a href="./write.html" class="btn">글쓰기</a>
-</body>
-</html>
-=======
     </table>  
     <a href="./write.html" class="btn">글쓰기</a>
   </body>
 </html>
->>>>>>> 34c2d19 (fix: list.html 수정)
