vfix: view.html class 속성 위치, button href 속성 변경

--- a/board/view.html
+++ b/board/view.html
@@ -16,27 +16,27 @@
 <div class="container">
   <ul class="view-list">
 
-    <li class="title">
+    <li>
       <span>제목: </span>
-      <span>ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</span>
+      <span class="title"></span>
     </li>
 
-    <li class="writer">
+    <li>
       <span>작성자: </span>
-      <span>ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</span>
+      <span class="writer"></span>
     </li>
 
     <li class="created-at">00:00</li>
 
-    <li class="content">
+    <li>
       <span>내용: </span>
-      <p>ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ</p>
+      <p class="content"></p>
     </li>
 
     <li class="buttons">
-        <button class="list-button" href="#">목록</button>
-        <button class="modify-button" href="##">수정</button>
-        <button class="delete-button" href="###">삭제</button>
+        <button class="list-button" href="./list.html">목록</button>
+        <button class="modify-button" href="./modify.html">수정</button>
+        <button class="delete-button">삭제</button>
     </li>
 
 
