fix: view.html, view.js 수정, 버튼 링크/id 구조분해할당

--- a/board/view.html
+++ b/board/view.html
@@ -34,9 +34,9 @@
     </li>
 
     <li class="buttons">
-        <button class="list-button" href="./list.html">목록</button>
-        <button class="modify-button" href="./modify.html">수정</button>
-        <button class="delete-button">삭제</button>
+      <button class="list-button"><a href="./list.html">목록</a></button>
+      <button class="modify-button"><a href="./modify.html">수정</a></button>
+      <button class="delete-button">삭제</button>
     </li>
 
 
