--- a/board/list.html
+++ b/board/list.html
@@ -19,6 +19,7 @@
           <th>조회수</th>
         </tr>
       </thead>
+      <tbody></tbody>
     </table>  
     <a href="./write.html" class="btn">글쓰기</a>
   </body>
