fix: index.html

--- a/board/list.html
+++ b/board/list.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Diary List</title>
-      <link rel="stylesheet" href="../public/css/list.css">
-      <script type="module" src="../public/js/board/list.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Diary List</title>
+    <link rel="stylesheet" href="../public/css/list.css" />
+    <script type="module" src="../public/js/board/list.js"></script>
   </head>
   <body>
     <h1><a href="/"></a>Diary</h1>
@@ -19,7 +19,7 @@
           <th>조회수</th>
         </tr>
       </thead>
-    </table>  
+    </table>
     <a href="./write.html" class="btn">글쓰기</a>
   </body>
 </html>
