fix list.html,css,js slide추가

--- a/board/list.html
+++ b/board/list.html
@@ -9,6 +9,24 @@
   </head>
   <body>
     <h1><a href="/"></a>Diary</h1>
+    <br />
+    <br />
+    <br />
+    <section id="slide">
+      <div class="active slide">
+        <img src="/public/img/imgNew1.jpg" alt="" />
+      </div>
+      <div class="slide">
+        <img src="/public/img/imgNew2.jpg" alt="" />
+      </div>
+      <div class="slide">
+        <img src="/public/img/imgNew3.jpg" alt="" />
+      </div>
+      <div class="slide">
+        <img src="/public/img/imgNew4.jpg" alt="" />
+      </div>
+    </section>
+    <script src="/Board/public/js/board/list.js"></script>
     <table class="board-table">
       <thead>
         <tr>
@@ -21,7 +39,7 @@
       </thead>
 
       <tbody></tbody>
-    </table> 
+    </table>
     <a href="./write.html" class="btn">글쓰기</a>
   </body>
 </html>
