storage.js 중대한 오류 수정

--- a/board/view.html
+++ b/board/view.html
@@ -13,36 +13,33 @@
 
   <h1><a href="/">View</a></h1>
 
-<div class="container">
-  <ul class="view-list">
+  <ul>
 
     <li>
       <span>제목: </span>
-      <span class="title"></span>
+      <span id="title">ㅇ</span>
     </li>
 
     <li>
       <span>작성자: </span>
-      <span class="writer"></span>
+      <span id="writer">ㅇ</span>
     </li>
 
-    <li class="created-at">00:00</li>
+    <li id="created-at">00:00</li>
 
     <li>
       <span>내용: </span>
-      <p class="content"></p>
+      <p id="content">ㅇ</p>
     </li>
 
     <li class="buttons">
-      <button class="list-button"><a href="./list.html">목록</a></button>
-      <button class="modify-button"><a href="./modify.html">수정</a></button>
-      <button class="delete-button">삭제</button>
+      <button id="list"><a href="./list.html">목록</a></button>
+      <button id="modify"><a href="./modify.html">수정</a></button>
+      <button id="delete">삭제</button>
     </li>
 
 
   </ul>
-
-</div>
 
 </body>
 
