fix: view.html id를 a tag로 옮김

--- a/board/view.html
+++ b/board/view.html
@@ -34,7 +34,7 @@
 
     <li class="buttons">
       <button id="list"><a href="./list.html">목록</a></button>
-      <button id="modify"><a href="./modify.html">수정</a></button>
+      <button><a id="modify" href="./modify.html">수정</a></button>
       <button id="delete">삭제</button>
     </li>
 
