--- a/board/list.html
+++ b/board/list.html
@@ -8,7 +8,7 @@
     <script type="module" src="../public/js/board/list.js"></script>
   </head>
   <body>
-    <h1><a href="/"></a>Diary</h1>
+    <h1><a href="/">Diary</a></h1>
     <br />
     <br />
     <br />
@@ -26,7 +26,6 @@
         <img src="/public/img/imgNew4.jpg" alt="" />
       </div>
     </section>
-    <script src="/Board/public/js/board/list.js"></script>
     <table class="board-table">
       <thead>
         <tr>
