--- a/board/list.html
+++ b/board/list.html
@@ -8,7 +8,7 @@
     <script type="module" src="../public/js/board/list.js"></script>
   </head>
   <body>
-    <h1><a href="/">Diary</a></h1>
+    <h1><a href="./list.html">Diary</a></h1>
     <br />
     <br />
     <br />
@@ -26,19 +26,23 @@
         <img src="/public/img/imgNew4.jpg" alt="" />
       </div>
     </section>
-    <table class="board-table">
-      <thead>
-        <tr>
-          <th>번호</th>
-          <th>제목</th>
-          <th>작성자</th>
-          <th>작성일</th>
-          <th>조회수</th>
-        </tr>
-      </thead>
-
-      <tbody></tbody>
-    </table>
-    <a href="./write.html" class="btn">글쓰기</a>
+    <div class="container">
+      <table class="board-table">
+        <thead>
+          <tr>
+            <th>번호</th>
+            <th>제목</th>
+            <th>작성자</th>
+            <th>작성일</th>
+            <th>조회수</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+      <div class="button-container">
+        <a href="./write.html" class="btn">글쓰기</a>
+        <a href="../index.html" class="btn">로그아웃</a>
+      </div>
+    </div>
   </body>
 </html>
