--- a/board/list.html
+++ b/board/list.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diary List</title>
     <link rel="stylesheet" href="../public/css/list.css" />
+    <link
+      href="/public/img/icon.jpg.png"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
     <script type="module" src="../public/js/board/list.js"></script>
   </head>
   <body>
