--- a/board/modify.html
+++ b/board/modify.html
@@ -4,6 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>수정페이지</title>
     <link href="../public/css/modify.css" rel="stylesheet" type="text/css" />
+    <link
+      href="/public/img/icon.jpg.png"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
     <script type="module" src="../public/js/board/modify.js"></script>
   </head>
   <body>
