--- a/board/write.html
+++ b/board/write.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diary Write</title>
     <link rel="stylesheet" href="../public/css/write.css" type="text/css" />
+    <link
+      href="/public/img/icon.jpg.png"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
     <script src="../public/js/board/write.js" type="module"></script>
   </head>
   <body>
