--- a/board/view.html
+++ b/board/view.html
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>View</title>
+    <link rel="stylesheet" href="../public/css/view.css" />
+    <link
+      href="/public/img/icon.jpg.png"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
+    <script type="module" src="../public/js/board/view.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>View</title>
-  <link rel="stylesheet" href="../public/css/view.css">
-  <script type="module" src="../public/js/board/view.js"></script>
-</head>
+  <body>
+    <h1><a href="/">View</a></h1>
 
-<body>
+    <ul>
+      <li>
+        <span>제목: </span>
+        <span id="title">ㅇ</span>
+      </li>
 
-  <h1><a href="/">View</a></h1>
+      <li>
+        <span>작성자: </span>
+        <span id="writer">ㅇ</span>
+      </li>
 
-  <ul>
+      <li id="created-at">00:00</li>
 
-    <li>
-      <span>제목: </span>
-      <span id="title">ㅇ</span>
-    </li>
+      <li>
+        <span>내용: </span>
+        <p id="content">ㅇ</p>
+      </li>
 
-    <li>
-      <span>작성자: </span>
-      <span id="writer">ㅇ</span>
-    </li>
-
-    <li id="created-at">00:00</li>
-
-    <li>
-      <span>내용: </span>
-      <p id="content">ㅇ</p>
-    </li>
-
-    <li class="buttons">
-      <button id="list"><a href="./list.html">목록</a></button>
-      <button><a id="modify" href="./modify.html">수정</a></button>
-      <button id="delete">삭제</button>
-    </li>
-
-
-  </ul>
-
-</body>
-
+      <li class="buttons">
+        <button id="list"><a href="./list.html">목록</a></button>
+        <button><a id="modify" href="./modify.html">수정</a></button>
+        <button id="delete">삭제</button>
+      </li>
+    </ul>
+  </body>
 </html>
