--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="index.css" />
+    <link
+      href="/public/img/icon.jpg.png"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="wrap">
