--- a/board/write.html
+++ b/board/write.html
@@ -15,7 +15,7 @@
   <body>
     <h1><a href="./list.html">Diet diary List</a></h1>
 
-    <h2 class="board-title">글 쓰기</h2>
+    <h2 class="board-title">글 쓰기: 오늘의 식사는 어땠나요?</h2>
     <form action="./view.html?id=id" id="writeform">
       <ul class="board-write-form">
         <li>
