fix : list.html (h1 태그 텍스트 수정 및 링크 페이지 삭제)

--- a/board/list.html
+++ b/board/list.html
@@ -13,7 +13,7 @@
     <script type="module" src="../public/js/board/list.js"></script>
   </head>
   <body>
-    <h1><a href="./list.html">Diary</a></h1>
+    <h1><a href="#">Diet diary List</a></h1>
     <br />
     <br />
     <br />
