--- a/board/modify.html
+++ b/board/modify.html
@@ -12,9 +12,9 @@
     <script type="module" src="../public/js/board/modify.js"></script>
   </head>
   <body>
-    <h1><a href="/">Logo</a></h1>
+    <h1><a href="#">Diet diary List</a></h1>
 
-    <h2 class="modify-title">글수정</h2>
+    <h2 class="modify-title">글 수정</h2>
     <form id="modifyform">
       <ul class="modify-write-form">
         <!-- <li>
@@ -26,6 +26,7 @@
           <input id="title-Form" type="text" name="title" />
         </li>
         <li>
+          <span>내용</span>          
           <textarea
             id="textarea-Form"
             name="content"
@@ -35,7 +36,7 @@
         </li>
       </ul>
 
-      <button type="submit" class="btn">글수정</button>
+      <button type="submit" class="btn">글 수정</button>
     </form>
   </body>
 </html>
